# Fast-ALPR

./: CMakeLists.txt  README.md  main.cpp
ocr/: clipper.cpp  clipper.h  cls_procces.cpp  cls_procces.h  crnn_process.cpp  crnn_process.h  db_post_procces.cpp  db_post_procces.h
tools/: imgutils.cpp  imgutils.h
yolov8/: boundboxe.cpp  boundboxe.h  keypoints.cpp  keypoints.h  yolovpose.cpp  yolovpose.h
